# agent-skill

./: .env.example  .gitignore  README.md  pyproject.toml
guided_requests/: 2026-06-24_23-54-58_dev_创建.json
skill_agent/: __init__.py  cli.py
skill_agent/config/: __init__.py  config.py
skill_agent/llm/: __init__.py  agent.py
skill_agent/prompts/: __init__.py  prompts.py
skill_agent/registry/: __init__.py  registry.py
skill_agent/repl/: __init__.py  repl.py
skill_agent/skill/: __init__.py  skill.py
skill_agent/tools/: __init__.py  bash_tool.py  dispatcher.py  fs_tools.py  skill_tools.py
skills/example-greet/: SKILL.md  greet.py
skills/hello-world/: SKILL.md
skills/task-splitter/: SKILL.md
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_registry.py  test_skill_parsing.py  test_tools.py
